tests/func/parsing/error_reporting/custom_hints/expected_operator_lr.err
1:6: syntax error: unexpected token number(4)
    1 | 2 + 3 4 * 7
      |       ^^^ expected: ) * + STOP
  hint: You must have an operator between numbers